--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700');
 @font-face {
   font-family: 'akrobat';
   src: url('../fonts/akrobat-bold-webfont.ttf');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'akrobat2';
+  src: url('../fonts/Akrobat-Bold.otf');
   font-weight: bold;
 }
