--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -45,7 +45,7 @@
   }
 }
 
-.banner, #navbar, .mouse {
+#navbar, .mouse {
   -webkit-animation: aniload 4s;
   -moz-animation: aniload 4s;
   -ms-animation: aniload 4s;
@@ -70,6 +70,25 @@
   position: absolute;
   left: 0;
   z-index: -1;
+}
+
+.shape3 {
+  margin: -60px 0 0 -170px;
+  -webkit-animation: spin 10s linear infinite;
+  -moz-animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
+  position: absolute;
+  z-index: -1;
+}
+
+.shape4 {
+  margin: 30px 0 0 -170px;
+  -webkit-animation: spin 10s linear infinite;
+  -moz-animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
+  position: absolute;
+  left: 0;
+  z-index: -2;
 }
 
 @-moz-keyframes spin {
