--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,12 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400');
 @font-face {
   font-family: 'akrobat';
   src: url('../fonts/akrobat-bold-webfont.ttf');
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: 'akrobat2';
-  src: url('../fonts/Akrobat-Bold.otf');
   font-weight: bold;
 }
