--- a/src/css/navcss.css
+++ b/src/css/navcss.css
@@ -7,7 +7,7 @@
 
 .a {
   color: #313131;
-  font-family: 'Anton', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 2em;
   text-decoration: none;
 }
@@ -354,7 +354,7 @@ a:visited {
   letter-spacing: 4px;
   /*   opacity: 0; */
   padding: 10px 0;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: bolder;
   text-align: right;
   /* text-transform: uppercase; */
